--- a/views/mdc/assets/scss/components/list.scss
+++ b/views/mdc/assets/scss/components/list.scss
@@ -17,4 +17,8 @@
   }
 }
 
+.mdc-list-item__meta {
+  white-space: nowrap;
+}
+
 
